# cobotta_demo

./: CMakeLists.txt  README.md  package.xml
cobotta_client/: CMakeLists.txt  package.xml
cobotta_client/include/cobotta_client/: communicate_master.h
cobotta_client/launch/: communicate_master.launch
cobotta_client/src/: communicate_master.cpp  communicate_master_node.cpp
rviz/: cobotta.rviz
src/: cobotta_server.cpp  freeze_clustering_result.py
test/: client_socket_test.py
