<?xml version="1.0"?>
<package format="2">
  <name>cobotta_demo</name>
  <version>1.0.0</version>
  <description>The cobotta_demo package</description>

  <maintainer email="atsuki.yokota@gmail.com">Atsuki Yokota</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>


  <test_depend>roslaunch</test_depend>

</package>
