<?xml version="1.0"?>
<package format="2">
  <name>cobotta_client</name>
  <version>0.0.0</version>
  <description>The cobotta_client package</description>
  <maintainer email="yamafukukei@todo.todo">yamafukukei</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

  <build_depend>denso_gripper_srvs</build_depend>
  <build_depend>denso_state_srvs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <exec_depend>denso_gripper_srvs</exec_depend>
  <exec_depend>denso_state_srvs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <test_depend>roslaunch</test_depend>

</package>
